<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_gradient_background_main"
    tools:context=".RegisterActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <Button
            android:id="@+id/registerBtnBack"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@drawable/back_arrow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.02"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/registerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerPageTitle"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="30sp"
            android:textStyle="bold"
            app:fontFamily="@font/segoe_ui_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registerBtnBack" />

        <TextView
            android:id="@+id/registerDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/registerPageDesc"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="normal"
            app:fontFamily="@font/segoe_ui"
            app:layout_constraintEnd_toEndOf="@id/registerTitle"
            app:layout_constraintStart_toStartOf="@id/registerTitle"
            app:layout_constraintTop_toBottomOf="@id/registerTitle" />


        <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:paddingBottom="20dp"
            android:background="@drawable/layout_curved_container_transparent"
            app:layout_constraintEnd_toEndOf="@id/registerTitle"
            app:layout_constraintStart_toStartOf="@id/registerTitle"
            app:layout_constraintTop_toBottomOf="@id/registerDesc">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/registerStudentInputRegNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/registerStudentInputRegNoEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/registerStudentRegNo"
                    android:inputType="number"
                    android:maxLength="12"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:textSize="20sp"
                    app:fontFamily="@font/open_sans_regular" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/registerStudentDeptSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@id/registerStudentInputRegNo"
                app:layout_constraintTop_toBottomOf="@id/registerStudentInputRegNo" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/registerStudentYearSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="@id/registerStudentInputRegNo"
                app:layout_constraintStart_toEndOf="@id/registerStudentDeptSpinner"
                app:layout_constraintTop_toBottomOf="@id/registerStudentInputRegNo" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/registerStudentInputMobNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="@id/registerStudentInputRegNo"
                app:layout_constraintStart_toStartOf="@id/registerStudentInputRegNo"
                app:layout_constraintTop_toBottomOf="@id/registerStudentYearSpinner">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/registerStudentInputMobNoEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/registerStudentMobNo"
                    android:inputType="number"
                    android:maxLength="10"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:textSize="20sp"
                    app:fontFamily="@font/open_sans_regular" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/registerStudentBusRouteSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="@id/registerStudentInputRegNo"
                app:layout_constraintStart_toStartOf="@id/registerStudentInputRegNo"
                app:layout_constraintTop_toBottomOf="@id/registerStudentInputMobNo" />

            <TextView
                android:id="@+id/registerStudentSubDet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/segoe_ui"
                android:text="@string/registerPageSubDet"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@id/registerStudentInputRegNo"
                app:layout_constraintStart_toStartOf="@id/registerStudentInputRegNo"
                app:layout_constraintTop_toBottomOf="@id/registerStudentBusRouteSpinner" />

            <TextView
                android:id="@+id/registerStudentSubDetWhy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:alpha="0.8"
                android:fontFamily="@font/segoe_ui"
                android:text="@string/registerPageSubWhy"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@id/registerStudentInputRegNo"
                app:layout_constraintStart_toStartOf="@id/registerStudentInputRegNo"
                app:layout_constraintTop_toBottomOf="@id/registerStudentSubDet" />

            <Button
                android:id="@+id/registerStudentBtnSubIDCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_rounded_transparent"
                android:fontFamily="@font/segoe_ui"
                android:padding="5dp"
                android:text="@string/registerStudentSubIDCard"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@id/registerStudentInputRegNo"
                app:layout_constraintStart_toStartOf="@id/registerStudentInputRegNo"
                app:layout_constraintTop_toBottomOf="@id/registerStudentSubDetWhy" />

            <Button
                android:id="@+id/registerStudentBtnSubBusPass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_rounded_transparent"
                android:fontFamily="@font/segoe_ui"
                android:padding="5dp"
                android:text="@string/registerStudentSubBusPass"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@id/registerStudentBtnSubIDCard"
                app:layout_constraintStart_toStartOf="@id/registerStudentBtnSubIDCard"
                app:layout_constraintTop_toBottomOf="@id/registerStudentBtnSubIDCard" />

            <TextView
                android:id="@+id/registerStudentTerms"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/segoe_ui"
                android:text="@string/registerPageTerms"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@id/registerStudentInputRegNo"
                app:layout_constraintStart_toStartOf="@id/registerStudentInputRegNo"
                app:layout_constraintTop_toBottomOf="@id/registerStudentBtnSubBusPass" />

            <Button
                android:id="@+id/registerStudentBtnSubmit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_rounded_secondary"
                android:fontFamily="@font/segoe_ui"
                android:padding="5dp"
                android:text="@string/registerPageCompleteReg"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@id/registerStudentBtnSubIDCard"
                app:layout_constraintStart_toStartOf="@id/registerStudentBtnSubIDCard"
                app:layout_constraintTop_toBottomOf="@id/registerStudentTerms" />
        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>